threadpool now consists of virtual threads to accomodate high throughput - updated to java 21